--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,7 @@
     "env": {                             // http://eslint.org/docs/user-guide/configuring.html#specifying-environments
         "browser": true,                 // browser global variables
         "node": true,                    // Node.js global variables and Node.js-specific rules
-        "es6": true,
+        "es6": true
     },
     "rules": {
         /**
