--- a/.eslintrc
+++ b/.eslintrc
@@ -94,7 +94,9 @@
         /**
          * Style
          */
-        "indent": ["error", 4],          // http://eslint.org/docs/rules/indent
+        "indent": ["error", 4, {         // http://eslint.org/docs/rules/indent
+            "SwitchCase": 1 
+        }],
         "brace-style": [2,               // http://eslint.org/docs/rules/brace-style
             "stroustrup", {
                 "allowSingleLine": true
