--- a/.jshintrc
+++ b/.jshintrc
@@ -28,7 +28,7 @@
     // Prohibit use of == and != in favor of === and !==.
     "eqeqeq": true,
 
-    // Enforce tab width of 2 spaces.
+    // Enforce tab width of 4 spaces.
     "indent": 4,
 
     // Prohibit use of a variable before it is defined.
@@ -40,7 +40,7 @@
     // Require capitalized names for constructor functions.
     "newcap": true,
 
-    // Enforce use of single quotation marks for strings.
+    // Enforce use of double quotation marks for strings.
     "quotmark": "double",
 
     // Enforce placing 'use strict' at the top function scope
