Default to newest ECMAScript version for parser
Normally ESLint defaults to ES5. Since this StyleGuide is aimed at NodeJS we support all stable ES features.

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,9 @@
         "node": true,                    // Node.js global variables and Node.js-specific rules
         "es6": true
     },
+    "parserOptions": {
+        "ecmaVersion": 11
+    },
     "rules": {
         /**
          * Strict mode
