--- a/.eslintrc
+++ b/.eslintrc
@@ -7,10 +7,15 @@
         "es2021": true,                  // ESNext support
         "es6": true                      // enable all ECMAScript 6 features except for modules
     },
-    "parser": "babel-eslint",            // npm install babel-eslint --save-dev
+    "parser": "@babel/eslint-parser",    // npm install @babel/eslint-parser --save-dev
     "parserOptions": {
-        "ecmaVersion": 12,
-        "sourceType": "script"
+        "ecmaVersion": 12,               // set highest possible version
+        "sourceType": "script",          // don't treat scripts as modules (keeps enforcing "use strict")
+        "requireConfigFile": false,      // make babel not look for config
+        "babelOptions": {
+            "plugins": [                 // additional plugins for new ES-proposals such as "@babel/plugin-proposal-class-properties"
+            ]
+        }
     },
     "rules": {
         /**
