--- a/.eslintrc
+++ b/.eslintrc
@@ -1,19 +1,19 @@
-{                                        // NullDev-Style ESLint Config: https://github.com/NullDevCo/JavaScript-Styleguide
+{                                           // NullDev-Style ESLint Config: https://github.com/NullDevCo/JavaScript-Styleguide
     "plugins": [],
-    "env": {                             // http://eslint.org/docs/user-guide/configuring.html#specifying-environments
-        "browser": true,                 // browser global variables
-        "node": true,                    // Node.js global variables and Node.js-specific rules
-        "commonjs": true,                // CommonJS global variables and CommonJS scoping
-        "es2021": true,                  // ESNext support
-        "es6": true                      // enable all ECMAScript 6 features except for modules
+    "env": {                                // http://eslint.org/docs/user-guide/configuring.html#specifying-environments
+        "browser": true,                    // browser global variables
+        "node": true,                       // Node.js global variables and Node.js-specific rules
+        "commonjs": true,                   // CommonJS global variables and CommonJS scoping
+        "es2021": true,                     // ESNext support
+        "es6": true                         // enable all ECMAScript 6 features except for modules
     },
-    "parser": "@babel/eslint-parser",    // npm install @babel/eslint-parser --save-dev
+    "parser": "@babel/eslint-parser",       // npm install @babel/eslint-parser --save-dev
     "parserOptions": {
-        "ecmaVersion": 12,               // set highest possible version
-        "sourceType": "script",          // don't treat scripts as modules (keeps enforcing "use strict")
-        "requireConfigFile": false,      // make babel not look for config
+        "ecmaVersion": 12,                  // set highest possible version
+        "sourceType": "script",             // don't treat scripts as modules (keeps enforcing "use strict")
+        "requireConfigFile": false,         // make babel not look for config
         "babelOptions": {
-            "plugins": [                 // additional plugins for new ES-proposals such as "@babel/plugin-proposal-class-properties"
+            "plugins": [                    // additional plugins for new ES-proposals such as "@babel/plugin-proposal-class-properties"
             ]
         }
     },
@@ -21,88 +21,88 @@
         /**
          * Strict mode
          */
-        "strict": [2, "global"],         // http://eslint.org/docs/rules/strict
+        "strict": [2, "global"],            // http://eslint.org/docs/rules/strict
         /**
          * ES6
          */
-        "no-var": 2,                     // http://eslint.org/docs/rules/no-var
-        "prefer-const": 0,               // http://eslint.org/docs/rules/prefer-const
+        "no-var": 2,                        // http://eslint.org/docs/rules/no-var
+        "prefer-const": 0,                  // http://eslint.org/docs/rules/prefer-const
         /**
          * Variables
          */
-        "no-shadow": 2,                  // http://eslint.org/docs/rules/no-shadow
-        "no-shadow-restricted-names": 2, // http://eslint.org/docs/rules/no-shadow-restricted-names
-        "no-unused-vars": [2, {          // http://eslint.org/docs/rules/no-unused-vars
+        "no-shadow": 2,                     // http://eslint.org/docs/rules/no-shadow
+        "no-shadow-restricted-names": 2,    // http://eslint.org/docs/rules/no-shadow-restricted-names
+        "no-unused-vars": [2, {             // http://eslint.org/docs/rules/no-unused-vars
             "vars": "local",
             "args": "after-used"
         }],
-        "no-use-before-define": 2,       // http://eslint.org/docs/rules/no-use-before-define
+        "no-use-before-define": 2,          // http://eslint.org/docs/rules/no-use-before-define
         /**
          * Possible errors
          */
-        "comma-dangle": 0,               // http://eslint.org/docs/rules/comma-dangle
-        "no-cond-assign": [2, "always"], // http://eslint.org/docs/rules/no-cond-assign
-        "no-console": 0,                 // http://eslint.org/docs/rules/no-console
-        "no-debugger": 1,                // http://eslint.org/docs/rules/no-debugger
-        "no-alert": 1,                   // http://eslint.org/docs/rules/no-alert
-        "no-constant-condition": 1,      // http://eslint.org/docs/rules/no-constant-condition
-        "no-dupe-keys": 2,               // http://eslint.org/docs/rules/no-dupe-keys
-        "no-duplicate-case": 2,          // http://eslint.org/docs/rules/no-duplicate-case
-        "no-empty": 2,                   // http://eslint.org/docs/rules/no-empty
-        "no-ex-assign": 2,               // http://eslint.org/docs/rules/no-ex-assign
-        "no-extra-boolean-cast": 0,      // http://eslint.org/docs/rules/no-extra-boolean-cast
-        "no-extra-semi": 2,              // http://eslint.org/docs/rules/no-extra-semi
-        "no-func-assign": 2,             // http://eslint.org/docs/rules/no-func-assign
-        "no-inner-declarations": 2,      // http://eslint.org/docs/rules/no-inner-declarations
-        "no-invalid-regexp": 2,          // http://eslint.org/docs/rules/no-invalid-regexp
-        "no-irregular-whitespace": 2,    // http://eslint.org/docs/rules/no-irregular-whitespace
-        "no-obj-calls": 2,               // http://eslint.org/docs/rules/no-obj-calls
-        "no-sparse-arrays": 2,           // http://eslint.org/docs/rules/no-sparse-arrays
-        "no-unreachable": 2,             // http://eslint.org/docs/rules/no-unreachable
-        "use-isnan": 2,                  // http://eslint.org/docs/rules/use-isnan
-        "block-scoped-var": 2,           // http://eslint.org/docs/rules/block-scoped-var
+        "comma-dangle": ["error", "never"], // http://eslint.org/docs/rules/comma-dangle
+        "no-cond-assign": [2, "always"],    // http://eslint.org/docs/rules/no-cond-assign
+        "no-console": 0,                    // http://eslint.org/docs/rules/no-console
+        "no-debugger": 1,                   // http://eslint.org/docs/rules/no-debugger
+        "no-alert": 1,                      // http://eslint.org/docs/rules/no-alert
+        "no-constant-condition": 1,         // http://eslint.org/docs/rules/no-constant-condition
+        "no-dupe-keys": 2,                  // http://eslint.org/docs/rules/no-dupe-keys
+        "no-duplicate-case": 2,             // http://eslint.org/docs/rules/no-duplicate-case
+        "no-empty": 2,                      // http://eslint.org/docs/rules/no-empty
+        "no-ex-assign": 2,                  // http://eslint.org/docs/rules/no-ex-assign
+        "no-extra-boolean-cast": 0,         // http://eslint.org/docs/rules/no-extra-boolean-cast
+        "no-extra-semi": 2,                 // http://eslint.org/docs/rules/no-extra-semi
+        "no-func-assign": 2,                // http://eslint.org/docs/rules/no-func-assign
+        "no-inner-declarations": 2,         // http://eslint.org/docs/rules/no-inner-declarations
+        "no-invalid-regexp": 2,             // http://eslint.org/docs/rules/no-invalid-regexp
+        "no-irregular-whitespace": 2,       // http://eslint.org/docs/rules/no-irregular-whitespace
+        "no-obj-calls": 2,                  // http://eslint.org/docs/rules/no-obj-calls
+        "no-sparse-arrays": 2,              // http://eslint.org/docs/rules/no-sparse-arrays
+        "no-unreachable": 2,                // http://eslint.org/docs/rules/no-unreachable
+        "use-isnan": 2,                     // http://eslint.org/docs/rules/use-isnan
+        "block-scoped-var": 2,              // http://eslint.org/docs/rules/block-scoped-var
         /**
          * Best practices
          */
-        "consistent-return": 1,          // http://eslint.org/docs/rules/consistent-return
-        "curly": [2, "multi-line"],      // http://eslint.org/docs/rules/curly
-        "default-case": 2,               // http://eslint.org/docs/rules/default-case
-        "dot-notation": [2, {            // http://eslint.org/docs/rules/dot-notation
+        "consistent-return": 1,             // http://eslint.org/docs/rules/consistent-return
+        "curly": [2, "multi-line"],         // http://eslint.org/docs/rules/curly
+        "default-case": 2,                  // http://eslint.org/docs/rules/default-case
+        "dot-notation": [2, {               // http://eslint.org/docs/rules/dot-notation
             "allowKeywords": true
         }],
-        "eqeqeq": 2,                     // http://eslint.org/docs/rules/eqeqeq
-        "guard-for-in": 0,               // http://eslint.org/docs/rules/guard-for-in
-        "no-caller": 2,                  // http://eslint.org/docs/rules/no-caller
-        "no-else-return": 2,             // http://eslint.org/docs/rules/no-else-return
-        "no-eq-null": 2,                 // http://eslint.org/docs/rules/no-eq-null
-        "no-eval": 2,                    // http://eslint.org/docs/rules/no-eval
-        "no-extend-native": 2,           // http://eslint.org/docs/rules/no-extend-native
-        "no-extra-bind": 2,              // http://eslint.org/docs/rules/no-extra-bind
-        "no-fallthrough": 2,             // http://eslint.org/docs/rules/no-fallthrough
-        "no-floating-decimal": 2,        // http://eslint.org/docs/rules/no-floating-decimal
-        "no-implied-eval": 2,            // http://eslint.org/docs/rules/no-implied-eval
-        "no-lone-blocks": 2,             // http://eslint.org/docs/rules/no-lone-blocks
-        "no-loop-func": 2,               // http://eslint.org/docs/rules/no-loop-func
-        "no-multi-str": 2,               // http://eslint.org/docs/rules/no-multi-str
-        "no-native-reassign": 2,         // http://eslint.org/docs/rules/no-native-reassign
-        "no-new": 2,                     // http://eslint.org/docs/rules/no-new
-        "no-new-func": 2,                // http://eslint.org/docs/rules/no-new-func
-        "no-new-wrappers": 2,            // http://eslint.org/docs/rules/no-new-wrappers
-        "no-octal": 2,                   // http://eslint.org/docs/rules/no-octal
-        "no-octal-escape": 2,            // http://eslint.org/docs/rules/no-octal-escape
-        "no-param-reassign": 2,          // http://eslint.org/docs/rules/no-param-reassign
-        "no-proto": 2,                   // http://eslint.org/docs/rules/no-proto
-        "no-redeclare": 2,               // http://eslint.org/docs/rules/no-redeclare
-        "no-return-assign": 2,           // http://eslint.org/docs/rules/no-return-assign
-        "no-script-url": 2,              // http://eslint.org/docs/rules/no-script-url
-        "no-self-compare": 2,            // http://eslint.org/docs/rules/no-self-compare
-        "no-sequences": 2,               // http://eslint.org/docs/rules/no-sequences
-        "no-throw-literal": 2,           // http://eslint.org/docs/rules/no-throw-literal
-        "no-with": 2,                    // http://eslint.org/docs/rules/no-with
-        "radix": 2,                      // http://eslint.org/docs/rules/radix
-        "vars-on-top": 2,                // http://eslint.org/docs/rules/vars-on-top
-        "wrap-iife": [2, "any"],         // http://eslint.org/docs/rules/wrap-iife
-        "yoda": 2,                       // http://eslint.org/docs/rules/yoda
+        "eqeqeq": 2,                        // http://eslint.org/docs/rules/eqeqeq
+        "guard-for-in": 0,                  // http://eslint.org/docs/rules/guard-for-in
+        "no-caller": 2,                     // http://eslint.org/docs/rules/no-caller
+        "no-else-return": 2,                // http://eslint.org/docs/rules/no-else-return
+        "no-eq-null": 2,                    // http://eslint.org/docs/rules/no-eq-null
+        "no-eval": 2,                       // http://eslint.org/docs/rules/no-eval
+        "no-extend-native": 2,              // http://eslint.org/docs/rules/no-extend-native
+        "no-extra-bind": 2,                 // http://eslint.org/docs/rules/no-extra-bind
+        "no-fallthrough": 2,                // http://eslint.org/docs/rules/no-fallthrough
+        "no-floating-decimal": 2,           // http://eslint.org/docs/rules/no-floating-decimal
+        "no-implied-eval": 2,               // http://eslint.org/docs/rules/no-implied-eval
+        "no-lone-blocks": 2,                // http://eslint.org/docs/rules/no-lone-blocks
+        "no-loop-func": 2,                  // http://eslint.org/docs/rules/no-loop-func
+        "no-multi-str": 2,                  // http://eslint.org/docs/rules/no-multi-str
+        "no-native-reassign": 2,            // http://eslint.org/docs/rules/no-native-reassign
+        "no-new": 2,                        // http://eslint.org/docs/rules/no-new
+        "no-new-func": 2,                   // http://eslint.org/docs/rules/no-new-func
+        "no-new-wrappers": 2,               // http://eslint.org/docs/rules/no-new-wrappers
+        "no-octal": 2,                      // http://eslint.org/docs/rules/no-octal
+        "no-octal-escape": 2,               // http://eslint.org/docs/rules/no-octal-escape
+        "no-param-reassign": 2,             // http://eslint.org/docs/rules/no-param-reassign
+        "no-proto": 2,                      // http://eslint.org/docs/rules/no-proto
+        "no-redeclare": 2,                  // http://eslint.org/docs/rules/no-redeclare
+        "no-return-assign": 2,              // http://eslint.org/docs/rules/no-return-assign
+        "no-script-url": 2,                 // http://eslint.org/docs/rules/no-script-url
+        "no-self-compare": 2,               // http://eslint.org/docs/rules/no-self-compare
+        "no-sequences": 2,                  // http://eslint.org/docs/rules/no-sequences
+        "no-throw-literal": 2,              // http://eslint.org/docs/rules/no-throw-literal
+        "no-with": 2,                       // http://eslint.org/docs/rules/no-with
+        "radix": 2,                         // http://eslint.org/docs/rules/radix
+        "vars-on-top": 2,                   // http://eslint.org/docs/rules/vars-on-top
+        "wrap-iife": [2, "any"],            // http://eslint.org/docs/rules/wrap-iife
+        "yoda": 2,                          // http://eslint.org/docs/rules/yoda
         /**
          * Style
          */
