--- a/.eslintrc
+++ b/.eslintrc
@@ -28,7 +28,7 @@
         "no-var": 2,                        // http://eslint.org/docs/rules/no-var
         "prefer-const": 0,                  // http://eslint.org/docs/rules/prefer-const
         "prefer-destructuring": [2, {       // http://eslint.org/docs/rules/prefer-destructuring
-            "array": true,
+            "array": false,
             "object": true
         }, {
             "enforceForRenamedProperties": false
