--- a/.eslintrc
+++ b/.eslintrc
@@ -80,7 +80,7 @@
         "dot-notation": [2, {               // http://eslint.org/docs/rules/dot-notation
             "allowKeywords": true
         }],
-        "linebreak-style": [2, "unix"]      // http://eslint.org/docs/rules/linebreak-style
+        "linebreak-style": [2, "unix"],     // http://eslint.org/docs/rules/linebreak-style
         "eqeqeq": 2,                        // http://eslint.org/docs/rules/eqeqeq
         "guard-for-in": 0,                  // http://eslint.org/docs/rules/guard-for-in
         "no-array-constructor": 2,          // http://eslint.org/docs/rules/no-array-constructor
