--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
         "es2021": true,                     // ESNext support
         "es6": true                         // enable all ECMAScript 6 features except for modules
     },
-    "parser": "@babel/eslint-parser",       // npm install @babel/eslint-parser --save-dev
+    "parser": "@babel/eslint-parser",       // npm install @babel/eslint-parser @babel/core eslint --save-dev
     "parserOptions": {
         "ecmaVersion": 12,                  // set highest possible version
         "sourceType": "script",             // don't treat scripts as modules (keeps enforcing "use strict")
