Enforce valid typeof

--- a/.eslintrc
+++ b/.eslintrc
@@ -72,6 +72,7 @@
         "no-unreachable": 2,                // http://eslint.org/docs/rules/no-unreachable
         "use-isnan": 2,                     // http://eslint.org/docs/rules/use-isnan
         "block-scoped-var": 2,              // http://eslint.org/docs/rules/block-scoped-var
+        "valid-typeof": 2,                  // http://eslint.org/docs/rules/valid-typeof
         /**
          * Best practices
          */
