--- a/.eslintrc
+++ b/.eslintrc
@@ -178,7 +178,15 @@
             "after": true
         }],
         "space-after-keywords": 0,          // http://eslint.org/docs/rules/space-after-keywords
-        "space-before-blocks": 0,           // http://eslint.org/docs/rules/space-before-blocks
+        "space-before-blocks": [2, {        // http://eslint.org/docs/rules/space-before-blocks
+            "functions": "never", 
+            "keywords": "never", 
+            "classes": "always"
+        }],
+        "keyword-spacing": [0, {            // http://eslint.org/docs/rules/keyword-spacing
+            "before": false,
+            "after": true
+        }],
         "space-before-function-paren": [2,
             "never"                         // http://eslint.org/docs/rules/space-before-function-paren
         ],
