--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,7 @@
     "parser": "@babel/eslint-parser",       // npm install @babel/eslint-parser @babel/core eslint --save-dev
     "parserOptions": {
         "ecmaVersion": 12,                  // set highest possible version
-        "sourceType": "script",             // don't treat scripts as modules (keeps enforcing "use strict")
+        "sourceType": "module",             // don't treat scripts as modules (keeps enforcing "use strict")
         "requireConfigFile": false,         // make babel not look for config
         "babelOptions": {
             "plugins": [                    // additional plugins for new ES-proposals such as "@babel/plugin-proposal-class-properties"
@@ -50,7 +50,10 @@
         /**
          * Possible errors
          */
-        "comma-dangle": [2, "always"],      // http://eslint.org/docs/rules/comma-dangle
+        "comma-dangle": [                   // http://eslint.org/docs/rules/comma-dangle
+            2,
+            "always-multiline"
+        ],
         "no-cond-assign": [2, "always"],    // http://eslint.org/docs/rules/no-cond-assign
         "no-console": 0,                    // http://eslint.org/docs/rules/no-console
         "no-debugger": 1,                   // http://eslint.org/docs/rules/no-debugger
