--- a/nulldev-template/.eslintrc
+++ b/nulldev-template/.eslintrc
@@ -50,7 +50,10 @@
         /**
          * Possible errors
          */
-        "comma-dangle": [2, "always"],      // http://eslint.org/docs/rules/comma-dangle
+        "comma-dangle": [                   // http://eslint.org/docs/rules/comma-dangle
+            2,
+            "always-multiline"
+        ],
         "no-cond-assign": [2, "always"],    // http://eslint.org/docs/rules/no-cond-assign
         "no-console": 0,                    // http://eslint.org/docs/rules/no-console
         "no-debugger": 1,                   // http://eslint.org/docs/rules/no-debugger
