--- a/.eslintrc
+++ b/.eslintrc
@@ -9,8 +9,8 @@
     },
     "parser": "@babel/eslint-parser",       // npm install @babel/eslint-parser @babel/core eslint --save-dev
     "parserOptions": {
-        "ecmaVersion": 12,                  // set highest possible version
-        "sourceType": "script",             // don't treat scripts as modules (keeps enforcing "use strict")
+        "ecmaVersion": "latest",            // set highest possible version
+        "sourceType": "module",             // prefer ES Modules (doesn't require "use strict")
         "requireConfigFile": false,         // make babel not look for config
         "babelOptions": {
             "plugins": [                    // additional plugins for new ES-proposals such as "@babel/plugin-proposal-class-properties"
