--- a/nulldev-template/.eslintrc
+++ b/nulldev-template/.eslintrc
@@ -1,16 +1,16 @@
-{                                           // NullDev-Style ESLint Config: https://github.com/NullDevCo/JavaScript-Styleguide
+{                                           // NullDev-Style ESLint Config: https://github.com/NullDev/JavaScript-Styleguide
     "plugins": [],                          // Additional ESLint Plugins
     "env": {                                // http://eslint.org/docs/user-guide/configuring.html#specifying-environments
         "browser": true,                    // browser global variables
         "node": true,                       // Node.js global variables and Node.js-specific rules
         "commonjs": true,                   // CommonJS global variables and CommonJS scoping
-        "es2021": true,                     // ESNext support
-        "es6": true                         // enable all ECMAScript 6 features except for modules
+        "es2022": true,                     // ESNext support
+        "es6": true                         // enable all ECMAScript 6 features
     },
     "parser": "@babel/eslint-parser",       // npm install @babel/eslint-parser @babel/core eslint --save-dev
     "parserOptions": {
-        "ecmaVersion": 12,                  // set highest possible version
-        "sourceType": "script",             // don't treat scripts as modules (keeps enforcing "use strict")
+        "ecmaVersion": "latest",            // set highest possible version
+        "sourceType": "module",             // prefer ES Modules (doesn't require "use strict")
         "requireConfigFile": false,         // make babel not look for config
         "babelOptions": {
             "plugins": [                    // additional plugins for new ES-proposals such as "@babel/plugin-proposal-class-properties"
